# libdoip

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  AnsiColors_8h.html  AnsiColors_8h.js  AnsiColors_8h__dep__incl.map  AnsiColors_8h__dep__incl.md5  AnsiColors_8h_source.html  ByteArray_8h.html  ByteArray_8h.js  ByteArray_8h__dep__incl.map  ByteArray_8h__dep__incl.md5  ByteArray_8h__incl.map  ByteArray_8h__incl.md5  ByteArray_8h_source.html  CMakeLists.txt  DoIPAddress_8h.html  DoIPAddress_8h.js  DoIPAddress_8h__dep__incl.map  DoIPAddress_8h__dep__incl.md5  DoIPAddress_8h__incl.map  DoIPAddress_8h__incl.md5  DoIPAddress_8h_source.html  DoIPClient_8cpp.html  DoIPClient_8cpp__incl.map  DoIPClient_8cpp__incl.md5  DoIPClient_8cpp_source.html  DoIPClient_8h.html  DoIPClient_8h.js  DoIPClient_8h__dep__incl.map  DoIPClient_8h__dep__incl.md5  DoIPClient_8h__incl.map  DoIPClient_8h__incl.md5  DoIPClient_8h_source.html  DoIPCloseReason_8h.html  DoIPCloseReason_8h.js  DoIPCloseReason_8h__dep__incl.map  DoIPCloseReason_8h__dep__incl.md5  DoIPCloseReason_8h__incl.map  (+461 more)
.github/: copilot-instructions.md
.github/workflows/: badge.yml  ci.yml  release.yml
cmake/: libdoipConfig.cmake.in  libiso13400Config.cmake.in  projectSettings.cmake
doc/: DOCUMENTATION.md  DoIPMessage_improved.h  ExampleDoIPServer.md  Fix-UDP-reception.md  IMPROVEMENTS.md  LOGGING.md  Logging.md  MacOs.md  ServerArchitecture.md  Timers.md  diag-power-mode.md  downstream-roadmap.md  example_usage.cpp  rdbis.md  uds-secure-session.md
doc/diagrams/: ServerModel.puml
doc/examples/: python_ack_response_example.md
doc/sockets/: SOCKET_CASTING_GUIDE.md  socket_casting_alternatives.cpp
doc/udp/: Makefile  README.md  doip_client.c  doip_server.c
doc/variadic/: DoIPMessage_variadic.h  VARIADIC_COMPARISON.md  example_variadic.cpp
examples/: CMakeLists.txt  ExampleDoIPServerModel.h  exampleByteArrayStream.cpp  exampleDoIPClient.cpp  exampleDoIPDiscover.cpp  exampleDoIPServer.cpp  exampleDoIPServerSimple.cpp
inc/: AliveCheckTimer.h  AnsiColors.h  ByteArray.h  DiagnosticMessageHandler.h  DoIPActivationType.h  DoIPAddress.h  DoIPClient.h  DoIPClient_h.h  DoIPCloseReason.h  DoIPConnection.h  DoIPDefaultConnection.h  DoIPDiagnosticMessage.h  DoIPDownstreamForwarder.h  DoIPDownstreamResult.h  DoIPDownstreamServerModel.h  DoIPEvent.h  DoIPFurtherAction.h  DoIPGenericHeaderHandler.h  DoIPIdentifiers.h  DoIPMessage.h  DoIPNegativeAck.h  DoIPNegativeDiagnosticAck.h  DoIPPayloadType.h  DoIPRoutingActivationResult.h  DoIPRoutingActivationType.h  DoIPServer.h  DoIPServerEvent.h  DoIPServerModel-refactored.h  DoIPServerModel.h  DoIPServerState.h  DoIPServerStateMachine.h  DoIPState.h  DoIPSyncStatus.h  DoIPTimes.h  DoIPVIN.h  IConnectionContext.h  IDownstreamProvider.h  Logger.h  MacAddress.h  RoutingActivationHandler.h  (+3 more)
inc/cli/: ServerConfigCLI.h
inc/uds/: IUdsServiceHandler.h  LambdaUdsHandler.h  UdsMock.h  UdsMockProvider.h  UdsResponseCode.h  UdsServices.h
libdoipclient/: CMakeLists.txt
libdoipclient/include/: DoIPClient_h.h
libdoipclient/src/: DoIPClient.cpp
libdoipclient/test/: DoIPClient_Test.cpp
libdoipcommon/: CMakeLists.txt
libdoipcommon/include/: AliveCheckTimer.h  ByteArray.h  DiagnosticMessageHandler.h  DoIPAddress.h  DoIPGenericHeaderHandler.h  DoIPMessage.h  DoIPNegativeAck.h  DoIPNegativeDiagnosticAck.h  DoIPPayloadType.h
libdoipcommon/src/: AliveCheckTimer.cpp  DiagnosticMessageHandler.cpp  DoIPGenericHeaderHandler.cpp
libdoipcommon/test/: DoIPGenericHeaderHandler_Test.cpp  DoIPMessage_Test.cpp
libdoipserver/: CMakeLists.txt
libdoipserver/include/: DoIPConnection.h  DoIPServer.h  RoutingActivationHandler.h  VehicleIdentificationHandler.h
libdoipserver/src/: DoIPConnection.cpp  DoIPServer.cpp  RoutingActivationHandler.cpp  VehicleIdentificationHandler.cpp
libdoipserver/test/: RoutingActivationHandler_Test.cpp  VehicleIdentificationHandler_Test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+89 more)
src/: AliveCheckTimer.cpp  DiagnosticMessageHandler.cpp  DoIPClient.cpp  DoIPConnection.cpp  DoIPDefaultConnection.cpp  DoIPGenericHeaderHandler.cpp  DoIPServer.cpp  DoIPServerStateMachine.cpp  Logger.cpp  MacAddress.cpp  RoutingActivationHandler.cpp  VehicleIdentificationHandler.cpp
src/cli/: ServerConfigCLI.cpp
src/uds/: UdsHelpers.cpp  UdsMock.cpp
test/: ByteArray_Test.cpp  CMakeLists.txt  DoIPClient_Test.cpp  DoIPDefaultConnection_Test.cpp  DoIPMessage_StreamOperator_Test.cpp  DoIPMessage_Test.cpp  DoIPServerStateMachine_Test.cpp  DoIPServer_Test.cpp  Identifiers_Test.cpp  MacAddress_Test.cpp  Misc_Test.cpp  RoutingActivationHandler_Test.cpp  Stream_Test.cpp  ThreadSafeQueue_Test.cpp  TimerManager_Test.cpp  VIN_Test.cpp  VehicleIdentificationHandler_Test.cpp  VehicleIdentification_Test.cpp  doctest_aux.h
test/cli/: ServerConfigCLI_Test.cpp
test/scripts/: ReadMe.md  change-vin-and-reset.py  hello-doip.py
test/uds/: UdsMock_Test.cpp
